...
    color: Color
) {
    val isExpanded by viewModel.isCardExpanded.collectAsState()
    Box {
        AnimatedExpand(
            modifier = Modifier
                .testTag("ExpandContent_Btn_Expand")
                .fillMaxWidth()
                .height(24.dp)
                .rippleClickable { viewModel.setCardExpanded(true) }
                .padding(vertical = 2.dp),
            visible = !isExpanded,
        ) {
...
                colorFilter = ColorFilter.tint(color),
                contentDescription = null
            )
        }
        AnimatedExpand(
            modifier = Modifier
                .testTag("ExpandContent_Btn_Collapse")
                .padding(horizontal = 24.dp)
                .fillMaxWidth(),
            visible = isExpanded,
        ) {
            Column(modifier = Modifier.fillMaxWidth()) {
                GameStatusCardLeaderInfo(
                    modifier = Modifier
                        .testTag("ExpandContent_LeaderInfo")
                        .padding(top = 8.dp)
                        .fillMaxWidth()
                        .wrapContentHeight(),
                    viewModel = viewModel,
                    color = color
                )
...
        modifier = modifier,
        horizontalArrangement = Arrangement.SpaceBetween,
        verticalAlignment = Alignment.CenterVertically
    ) {
        TeamInfo(
            modifier = Modifier
                .testTag("ScoreBoard_TeamInfo_Home")
                .padding(start = 16.dp),
            gameTeam = gameAndBets.game.homeTeam,
            textColor = textColor
        )
        GameStatusAndBetButton(
            gameAndBets = gameAndBets,
            textColor = textColor,
            betVisible = betVisible,
            onBetClick = onBetClick
        )
        TeamInfo(
            modifier = Modifier
                .testTag("ScoreBoard_TeamInfo_Away")
                .padding(end = 16.dp),
            gameTeam = gameAndBets.game.awayTeam,
            textColor = textColor
        )
    }
}
...
    Column(
        modifier = modifier,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(
            modifier = Modifier
                .testTag("TeamInfo_Text_TriCode")
                .padding(top = 16.dp),
            text = gameTeam.team.abbreviation,
            color = textColor,
            fontSize = 24.sp,
            fontWeight = FontWeight.Bold
        )
...
                .padding(top = 8.dp)
                .size(100.dp),
            team = gameTeam.team
        )
        Text(
            modifier = Modifier
                .testTag("TeamInfo_Text_Score")
                .padding(top = 8.dp),
            text = gameTeam.score.toString(),
            color = textColor,
            fontSize = 20.sp,
            fontWeight = FontWeight.Bold
        )
...
