...
        LeaderLabel(
            modifier = Modifier.fillMaxWidth(),
            color = color
        )
        LeaderRow(
            modifier = Modifier
                .testTag("LeaderInfo_LeaderRow_Home")
                .padding(top = 8.dp)
                .fillMaxWidth(),
            player = viewModel.homeLeader,
            isGamePlayed = viewModel.isGamePlayed,
            color = color
        )
        LeaderRow(
            modifier = Modifier
                .testTag("LeaderInfo_LeaderRow_Away")
                .padding(top = 8.dp)
                .fillMaxWidth(),
            player = viewModel.awayLeader,
            isGamePlayed = viewModel.isGamePlayed,
            color = color
        )
...
            Text(
                text = player.name,
                color = color,
                fontSize = 12.sp
            )
            Text(
                modifier = Modifier.testTag("LeaderRow_Text_PlayerInfo"),
                text = player.playerTitle,
                color = color,
                fontSize = 12.sp
            )
        }
        Spacer(modifier = Modifier.weight(1f))
        LeaderStatsText(
            modifier = Modifier
                .testTag("LeaderRow_Text_Pts")
                .width(36.dp),
            text = (if (isGamePlayed) player.points.toInt() else player.points).toString(),
            color = color
        )
        LeaderStatsText(
            modifier = Modifier
                .testTag("LeaderRow_Text_Reb")
                .width(36.dp),
            text = (if (isGamePlayed) player.rebounds.toInt() else player.rebounds).toString(),
            color = color
        )
        LeaderStatsText(
            modifier = Modifier
                .testTag("LeaderRow_Text_Ast")
                .width(36.dp),
            text = (if (isGamePlayed) player.assists.toInt() else player.assists).toString(),
            color = color
        )
    }
}
...
