...

    Box(
        modifier = modifier
    ) {
        HorizontalPager(
            modifier = Modifier
                .testTag("SchedulePage_Pager")
                .padding(top = 48.dp)
                .fillMaxSize(),
            state = pagerState,
            count = dateData.size
        ) { page ->
            dateData.getOrNull(page)?.let { dateData ->
...
    onClickCalendar: () -> Unit,
    onClickGame: (NbaGameAndBet) -> Unit
) {
    val isRefreshing by viewModel.isRefreshingSchedule.collectAsState()
    Box(
        modifier = Modifier
            .testTag("SchedulePage_Box")
            .pullRefresh(refreshState)
    ) {
        LazyColumn(
            modifier = Modifier
                .testTag("SchedulePage_LZ_Body")
                .fillMaxSize(),
            horizontalAlignment = Alignment.End
        ) {
            item {
                CalendarButton(
                    modifier = Modifier
                        .testTag("SchedulePage_Btn_Calendar")
                        .padding(top = 8.dp, end = 4.dp),
                    onClick = onClickCalendar
                )
            }
            itemsIndexed(games) { index, game ->
                val cardViewModel = remember(game) {
                    viewModel.createGameStatusCardViewModel(game)
                }
                GameStatusCard(
                    modifier = Modifier
                        .testTag("SchedulePage_GameStatusCard2")
                        .padding(
                            top = if (index == 0) 8.dp else 16.dp,
                            bottom = if (index >= games.size - 1) 16.dp else 0.dp,
                            start = 16.dp,
                            end = 16.dp
                        )
...
