...
) {
    Column(
        modifier = modifier,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(
            modifier = Modifier.testTag("GameStatusCard2_Text_GameStatus"),
            text = gameAndBets.game.gameStatusFormatText,
            textAlign = TextAlign.Center,
            color = textColor,
            fontSize = 16.sp,
            fontStyle = FontStyle.Italic
        )
        if (betVisible) {
            IconButton(
                modifier = Modifier
                    .testTag("GameStatusCard2_Btn_Bet")
                    .padding(top = 8.dp),
                drawableRes = R.drawable.ic_black_coin,
                tint = textColor,
                onClick = onBetClick
            )
        }
...
