package com.jiachian.nbatoday.compose.screen.home

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import com.jiachian.nbatoday.BaseAndroidTest
import com.jiachian.nbatoday.BasicTime
import com.jiachian.nbatoday.FinalGameId
import com.jiachian.nbatoday.GameCode
import com.jiachian.nbatoday.GameStatusFinal
import com.jiachian.nbatoday.R
import com.jiachian.nbatoday.UserAccount
import com.jiachian.nbatoday.UserName
import com.jiachian.nbatoday.UserPassword
import com.jiachian.nbatoday.UserPoints
import com.jiachian.nbatoday.compose.screen.home.schedule.models.DateData
import com.jiachian.nbatoday.models.GameLeaderFactory
import com.jiachian.nbatoday.models.GameTeamFactory
import com.jiachian.nbatoday.models.TeamStatsFactory
import com.jiachian.nbatoday.models.TestDataStore
import com.jiachian.nbatoday.models.TestRepository
import com.jiachian.nbatoday.models.local.game.Game
import com.jiachian.nbatoday.models.local.game.GameStatus
import com.jiachian.nbatoday.utils.assertDialogDoesNotExist
import com.jiachian.nbatoday.utils.assertDialogExist
import com.jiachian.nbatoday.utils.getOrAssert
import com.jiachian.nbatoday.utils.onAllNodesWithMergedTag
import com.jiachian.nbatoday.utils.onDialog
import com.jiachian.nbatoday.utils.onNodeWithMergedTag
import com.jiachian.nbatoday.utils.onNodeWithTag
import java.util.Date
import kotlin.math.pow
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.test.runTest
import org.hamcrest.CoreMatchers.equalTo
import org.hamcrest.CoreMatchers.instanceOf
import org.hamcrest.MatcherAssert.assertThat
import org.junit.After
import org.junit.Before
import org.junit.Test

@OptIn(ExperimentalCoroutinesApi::class)
class HomeScreenTest : BaseAndroidTest() {

    private lateinit var viewModel: HomeViewModel
    private lateinit var repository: TestRepository
    private lateinit var dataStore: TestDataStore
    private var currentState: NbaState? = null

    @Before
    fun setup() = runTest {
        repository = TestRepository()
        dataStore = TestDataStore()
        viewModel = HomeViewModel(
            repository = repository,
            dataStore = dataStore,
            openScreen = { currentState = it },
            dispatcherProvider = coroutineEnvironment.testDispatcherProvider
        )
        repository.refreshSchedule()
        repository.insertGame(getYesterdayGame())
        composeTestRule.setContent {
            HomeScreen(viewModel = viewModel)
        }
    }

    @After
    fun teardown() {
        repository.clear()
        dataStore.clear()
        currentState = null
    }

    @Test
    fun homeSchedule_clickCalendar_checksCurrentState() {
        composeTestRule
            .onNodeWithMergedTag("HomeBottom_Btn_Schedule")
            .performClick()
        val pageRoot = composeTestRule
            .onNodeWithMergedTag("SchedulePage_Pager")
        pageRoot
            .onNodeWithTag("SchedulePage_Box")
            .onNodeWithTag("SchedulePage_LZ_Body")
            .onNodeWithTag("SchedulePage_Btn_Calendar")
            .performClick()
        assertThat(currentState, instanceOf(NbaState.Calendar::class.java))
    }

    @Test
    fun homeSchedule_checksToday() {
        val dateData = DateData(2023, 1, 1)
        val todayGames = viewModel.scheduleGames.value[dateData].getOrAssert()
        assertThat(todayGames.size, equalTo(2))
        val firstGame = todayGames[0]
        val secondGame = todayGames[1]
        composeTestRule
            .onNodeWithMergedTag("HomeBottom_Btn_Schedule")
            .performClick()
        composeTestRule
            .onNodeWithText("1/1")
            .performClick()
        val pageRoot = composeTestRule
            .onNodeWithMergedTag("SchedulePage_Pager")
        val bodyRoot = pageRoot
            .onNodeWithTag("SchedulePage_Box")
            .onNodeWithTag("SchedulePage_LZ_Body")
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .performClick()
            .apply {
                assertThat(currentState, instanceOf(NbaState.BoxScore::class.java))
                val teamInfoHome = onNodeWithTag("ScoreBoard_TeamInfo_Home")
                val teamInfoAway = onNodeWithTag("ScoreBoard_TeamInfo_Away")
                teamInfoHome
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.homeTeam.team.abbreviation)
                teamInfoAway
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.awayTeam.team.abbreviation)
                teamInfoHome
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.homeTeam.score.toString())
                teamInfoAway.onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.awayTeam.score.toString())
                onNodeWithTag("GameStatusCard2_Text_GameStatus")
                    .assertTextEquals(firstGame.game.gameStatusText)
                onNodeWithTag("GameStatusCard2_Btn_Bet")
                    .assertDoesNotExist()
                onNodeWithTag("ExpandContent_Btn_Expand")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Home")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.homeLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Away")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.awayLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
            }
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 1)
            .performClick()
            .apply {
                assertThat(currentState, instanceOf(NbaState.BoxScore::class.java))
                val teamInfoHome = onNodeWithTag("ScoreBoard_TeamInfo_Home")
                val teamInfoAway = onNodeWithTag("ScoreBoard_TeamInfo_Away")
                teamInfoHome
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(secondGame.game.homeTeam.team.abbreviation)
                teamInfoAway
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(secondGame.game.awayTeam.team.abbreviation)
                teamInfoHome
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(secondGame.game.homeTeam.score.toString())
                teamInfoAway
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(secondGame.game.awayTeam.score.toString())
                onNodeWithTag("GameStatusCard2_Text_GameStatus")
                    .assertTextEquals(secondGame.game.gameStatusFormatText)
                onNodeWithTag("GameStatusCard2_Btn_Bet")
                    .assertDoesNotExist()
                onNodeWithTag("ExpandContent_Btn_Expand")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .assertIsDisplayed()
                    .performClick()

                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Home")
                    .apply {
                        val pointsLeader = secondGame.game.gameLeaders?.homeLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Away")
                    .apply {
                        val pointsLeader = secondGame.game.gameLeaders?.awayLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
            }
    }

    @Test
    fun homeSchedule_checksTomorrow() {
        val dateData = DateData(2023, 1, 2)
        val todayGames = viewModel.scheduleGames.value[dateData].getOrAssert()
        assertThat(todayGames.size, equalTo(1))
        val firstGame = todayGames[0]
        composeTestRule
            .onNodeWithMergedTag("HomeBottom_Btn_Schedule")
            .performClick()
        composeTestRule
            .onNodeWithText("1/2")
            .performClick()
        val pageRoot = composeTestRule
            .onNodeWithMergedTag("SchedulePage_Pager")
        val bodyRoot = pageRoot
            .onNodeWithTag("SchedulePage_Box")
            .onNodeWithTag("SchedulePage_LZ_Body")
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .onNodeWithTag("ScoreBoard_TeamInfo_Home")
            .performClick()
        assertThat(currentState, instanceOf(NbaState.Team::class.java))
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .performClick()
            .apply {
                onNodeWithTag("ScoreBoard_TeamInfo_Home")
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.homeTeam.team.abbreviation)
                onNodeWithTag("ScoreBoard_TeamInfo_Away")
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.awayTeam.team.abbreviation)
                onNodeWithTag("ScoreBoard_TeamInfo_Home")
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.homeTeam.score.toString())
                onNodeWithTag("ScoreBoard_TeamInfo_Away")
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.awayTeam.score.toString())
                onNodeWithTag("GameStatusCard2_Text_GameStatus")
                    .assertTextEquals(firstGame.game.gameStatusText.replaceFirst(" ", "\n"))
                onNodeWithTag("GameStatusCard2_Btn_Bet")
                    .assertIsDisplayed()
                onNodeWithTag("ExpandContent_Btn_Expand")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .assertIsDisplayed()
                    .performClick()

                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Home")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.homeLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toString())
                    }
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Away")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.awayLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toString())
                    }
            }
    }

    @Test
    fun homeSchedule_checksYesterday() {
        val dateData = DateData(2022, 12, 31)
        val todayGames = viewModel.scheduleGames.value[dateData].getOrAssert()
        assertThat(todayGames.size, equalTo(1))
        val firstGame = todayGames[0]
        composeTestRule
            .onNodeWithMergedTag("HomeBottom_Btn_Schedule")
            .performClick()
        composeTestRule
            .onNodeWithText("12/31")
            .performClick()
        val pageRoot = composeTestRule
            .onNodeWithMergedTag("SchedulePage_Pager")
        val bodyRoot = pageRoot
            .onNodeWithTag("SchedulePage_Box")
            .onNodeWithTag("SchedulePage_LZ_Body")
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .performClick()
            .apply {
                assertThat(currentState, instanceOf(NbaState.BoxScore::class.java))
                onNodeWithTag("ScoreBoard_TeamInfo_Home")
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.homeTeam.team.abbreviation)
                onNodeWithTag("ScoreBoard_TeamInfo_Away")
                    .onNodeWithTag("TeamInfo_Text_TriCode")
                    .assertTextEquals(firstGame.game.awayTeam.team.abbreviation)
                onNodeWithTag("ScoreBoard_TeamInfo_Home")
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.homeTeam.score.toString())
                onNodeWithTag("ScoreBoard_TeamInfo_Away")
                    .onNodeWithTag("TeamInfo_Text_Score")
                    .assertTextEquals(firstGame.game.awayTeam.score.toString())
                onNodeWithTag("GameStatusCard2_Text_GameStatus")
                    .assertTextEquals(firstGame.game.gameStatusText)
                onNodeWithTag("GameStatusCard2_Btn_Bet")
                    .assertDoesNotExist()
                onNodeWithTag("ExpandContent_Btn_Expand")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .assertIsDisplayed()
                    .performClick()
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Home")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.homeLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
                onNodeWithTag("ExpandContent_Btn_Collapse")
                    .onNodeWithTag("ExpandContent_LeaderInfo")
                    .onNodeWithTag("LeaderInfo_LeaderRow_Away")
                    .apply {
                        val pointsLeader = firstGame.game.gameLeaders?.awayLeaders.getOrAssert()
                        onNodeWithTag("LeaderRow_Text_PlayerInfo")
                            .assertTextEquals(
                                context.getString(
                                    R.string.player_info,
                                    pointsLeader.teamTricode,
                                    pointsLeader.jerseyNum,
                                    pointsLeader.position
                                )
                            )
                        onNodeWithTag("LeaderRow_Text_Ast")
                            .assertTextEquals(pointsLeader.assists.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Reb")
                            .assertTextEquals(pointsLeader.rebounds.toInt().toString())
                        onNodeWithTag("LeaderRow_Text_Pts")
                            .assertTextEquals(pointsLeader.points.toInt().toString())
                    }
            }
    }

    @Test
    fun homeSchedule_clickBetBtn_checksUI() {
        val dateData = DateData(2023, 1, 2)
        val todayGames = viewModel.scheduleGames.value[dateData].getOrAssert()
        assertThat(todayGames.size, equalTo(1))
        val firstGame = todayGames[0]
        composeTestRule
            .onNodeWithMergedTag("HomeBottom_Btn_Schedule")
            .performClick()
        composeTestRule
            .onNodeWithText("1/2")
            .performClick()
        val pageRoot = composeTestRule
            .onNodeWithMergedTag("SchedulePage_Pager")
        val bodyRoot = pageRoot
            .onNodeWithTag("SchedulePage_Box")
            .onNodeWithTag("SchedulePage_LZ_Body")
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .onNodeWithTag("GameStatusCard2_Btn_Bet")
            .assertIsDisplayed()
            .performClick()
        val loginDialog = composeTestRule
            .onDialog()
            .onNodeWithTag("LoginDialog_Dialog")
        loginDialog.apply {
            onNodeWithTag("LoginDialog_AccountTextField")
                .onNodeWithTag("AccountTextField_TextField_Account")
                .performTextInput(UserAccount)
            onNodeWithTag("LoginDialog_PasswordTextField")
                .onNodeWithTag("PasswordTextField_TextFiled_Password")
                .performTextInput(UserPassword)
            onNodeWithTag("LoginDialog_Btn_Login")
                .performClick()
        }
        bodyRoot
            .onNodeWithTag("SchedulePage_GameStatusCard2", 0)
            .onNodeWithTag("GameStatusCard2_Btn_Bet")
            .assertIsDisplayed()
            .performClick()
        val betDialog = composeTestRule
            .onDialog()
            .onNodeWithTag("BetDialog_Dialog")
        betDialog.apply {
            onNodeWithTag("BetDialogContent_BetDialogTeamEdit_Home")
                .onNodeWithTag("BetDialogTeamEdit_Text_Record")
                .assertTextEquals(
                    context.getString(
                        R.string.bet_win_lose_record,
                        firstGame.game.homeTeam.wins,
                        firstGame.game.homeTeam.losses
                    )
                )
            onNodeWithTag("BetDialogContent_BetDialogTeamEdit_Away")
